IDE recommended style changes